--- a/config.json
+++ b/config.json
@@ -3,5 +3,6 @@
   "output_folder_path": "ingesteddata",
   "test_data_path": "testdata",
   "output_model_path": "practicemodels",
-  "prod_deployment_path": "production_deployment"
+  "prod_deployment_path": "production_deployment",
+  "db_path": "practice_db.sqlite"
 }
